--- a/styles/pokeapi.css
+++ b/styles/pokeapi.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Rubik&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abel&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -12,7 +13,7 @@ body {
   padding-top: 25%;
   height: 100%;
   width: 100%;
-  font-family: "rubik", sans-serif;
+  font-family: "Abel", sans-serif;
   color: white;
   box-sizing: border-box;
   -webkit-animation: fadeIn 2s;
@@ -159,7 +160,7 @@ h1 {
   justify-content: center;
   align-items: center;
   position: relative;
-  cursor: url("https://img.icons8.com/color/48/null/open-pokeball--v2.png"), pointer;
+  cursor: url("https://img.icons8.com/color/48/null/open-pokeball--v2.png") 20 20, pointer;
 }
 
 .card-title {
@@ -401,11 +402,12 @@ h1 {
 }
 
 .game {
-  width: 80px;
-  height: 70px;
-  background-image: url("/assets/images/detectivePikachu.png");
+  width: 60px;
+  height: 60px;
+  background-image: url("/assets/images/game.png");
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 50px;
   font-size: 10px;
   font-weight: bold;
   color: white;
@@ -414,6 +416,12 @@ h1 {
   align-items: center;
   margin: 0 0 0 30px;
   box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.705);
+  transition: 0.2s;
+  cursor: url("/assets/images/battle.png") 20 20, pointer;
+}
+.game:hover {
+  scale: 1.3;
+  transition: 0.2s;
 }
 
 @-webkit-keyframes fadeIn {
