--- a/styles/pokeapi.scss
+++ b/styles/pokeapi.scss
@@ -266,6 +266,13 @@ main {
     align-items: center;
   }
 
+  &--description {
+    width: 100%;
+    max-width: 800px;
+    font-size: 12px;
+    margin: 5px 0 5px 0;
+  }
+
   &--Types {
     width: 100%;
     font-size: 12px;
@@ -288,10 +295,10 @@ main {
   &--BaseStats {
     width: 90%;
     max-width: 800px;
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
-    gap: 15px;
-    margin: 30px 0 10px 0;
+    gap: 10px;
+    margin: 10px 0 10px 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
